# FileUploadDialog

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp
qmllibs/CustomComponents/: .qmlls.ini  CMakeLists.txt  CustomFonts.qml  DashedBorderFrame.qml  DownloadItem.qml  FadeOutBehavior.qml  FakeUploadManager.cpp  FakeUploadManager.h  FileUploadDialog.qml  FileUtilities.cpp  FileUtilities.h  custom_window.cpp  custom_window.h  macos_utils.h  macos_utils.mm
